--- a/index.html
+++ b/index.html
@@ -1,1 +1,158 @@
-Hello World.
+<!DOCTYPE html>
+<html>
+<style>
+* {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+body {
+    background-color: #23283b;
+    min-height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.container {
+    background-color: #131313;
+    max-width: 300px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 25px 35px;
+    border-radius: 10px;
+    user-select: none;
+}
+#Display-area {
+    width: 100%;
+    margin: 3vh 0;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(2, minmax(40px, auto));
+    word-wrap: break-word;
+    padding-bottom: 20px;
+    border-bottom: 1px rgba(128, 128, 128, 0.166) solid;
+}
+#Display-area .currentInput {
+    /* display: flex; */
+    text-align: right;
+    height: 8vh;
+    color: white;
+    font-size: xx-large;
+    line-height: 2;
+    word-wrap: break-word;
+}
+#Display-area .answerScreen {
+    text-align: right;
+    color: rgba(150, 150, 150, 0.87);
+    height: 7px;
+    line-height: 3;
+    font-size: larger;
+}
+.keypad-btns {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: 20px;
+}
+.keypad-btns button {
+    outline: none;
+    border: none;
+    border-radius: 122px;
+    background-color: #232534;
+    color: #fff;
+    font-size: x-large;
+}
+.keypad-btns .fun_btn {
+    color: #000;
+    background: #00E6F6;
+    font-weight: bold;
+}
+.num_btn:hover {
+    background-color: #282a3a;
+}
+.fun_btn:hover {
+    background-color: #00c6d4;
+}
+@media only screen and (max-width: 600px) {
+    body {
+        background-color: #131313;
+        align-items: flex-start;
+    }
+}
+</style>
+<body>
+<div class="container">
+        <section id="Display-area">
+            <div class="currentInput"></div>
+            <div class="answerScreen">0</div>    
+        </section>
+        <section class="keypad-btns">
+           <button type="button" class="fun_btn" id="clear" value="">C</button> 
+           <button type="button" class="fun_btn" id="erase" value="">&#11013;</button>
+           <button type="button" class="fun_btn" value="/">/</button>
+           <button type="button" class="fun_btn" value="%">%</button>
+           <button type="button" class="fun_btn" value="7">7</button>
+           <button type="button" class="fun_btn" value="8">8</button>
+           <button type="button" class="fun_btn" value="9">9</button>
+           <button type="button" class="fun_btn" value="*">x</button>
+           <button type="button" class="fun_btn" value="4">4</button>
+           <button type="button" class="fun_btn" value="5">5</button>
+           <button type="button" class="fun_btn" value="6">6</button>
+           <button type="button" class="fun_btn" value="-">-</button>
+           <button type="button" class="fun_btn" value="1">1</button>
+           <button type="button" class="fun_btn" value="2">2</button>
+           <button type="button" class="fun_btn" value="3">3</button>
+           <button type="button" class="fun_btn" value="+">+</button>
+           <button type="button" class="fun_btn" value="00">00</button>
+           <button type="button" class="fun_btn" value="0">0</button>
+           <button type="button" class="fun_btn" value=".">.</button>
+           <button type="button" class="fun_btn" id="evaluate" value="">=</button>
+        </section>
+</div>
+<script>
+let currentInput = document.querySelector('.currentInput');
+let answerScreen = document.querySelector('.answerScreen');
+let buttons = document.querySelectorAll('button');
+let erasebtn = document.querySelector('#erase');
+let clearbtn = document.querySelector('#clear');
+let evaluate = document.querySelector('#evaluate');
+let realtimeScreenValue = []
+
+clearbtn.addEventListener("click", () => {
+
+    realTimeScreenValue = [''];
+    answerScreen.innerHTML = 0;
+    currentInput.className = 'currentInput'
+    answerscreen.className = 'answerScreen';
+    answerScreen.style.color = " rgba(150, 150, 150, 0.87)";
+})
+
+buttons.forEach((btn) => {
+    btn.addEventListener("click", () => {
+        if (!btn.id.match('erase')) {
+            realTimeScreenValue.push(btn.value)
+            currentInput.innerHTML = realTimeScreenValue.join('');
+            if (btn.classList.contains('num_btn')) {
+                answerScreen.innerHTML = eval(realTimeScreenValue.join(''));
+            }
+        }
+        if (btn.id.match('erase')) {
+            realTimeScreenValue.pop();
+            currentInput.innerHTML = realTimeScreenValue.join('');
+            answerScreen.innerHTML = eval(realtimeScreenValue.join(''));
+        }
+        if (btn.id.match('evaluate')) {
+            currentInput.className = 'answerScreen';
+            answerScreen.classname = 'currentInput';
+            answerScreen.style.color = "white";
+        }
+        if (typeof eval(realtimeScreenValue.join('')) == 'undefined') {
+            answerScreen.innerHTML = 0
+        }
+    })
+})
+</script>
+</body>    
+
+</html>
